--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
-    "formik": "^2.4.5",
     "prettier": "^3.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
     "react-i18next": "^14.0.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
