--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.5",
+    "google-map-react": "^2.2.1",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "prettier": "^3.1.1",
