--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/native": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.4.5",
-    "google-map-react": "^2.2.1",
-    "i18next": "^23.7.11",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "prettier": "^3.1.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.0",
-    "react-icons": "^4.12.0",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "redux-persist": "^6.0.0",
-    "swiper": "^11.0.5",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.3"
-  },
   "name": "fe-final-backend",
   "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "mongoose": "^5.13.21",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "unique-random": "^2.1.0",
+    "validator": "^11.1.0"
+  },
   "description": "Ecommerce backend",
   "main": "server.js",
   "scripts": {
@@ -46,25 +35,8 @@
   },
   "author": "DAN.IT",
   "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "mongoose": "^5.13.21",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.3.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "unique-random": "^2.1.0",
-    "validator": "^11.1.0"
-  },
   "devDependencies": {
-    "nodemon": "^1.19.1",
-    "concurrently": "^6.3.0"
+    "concurrently": "^6.3.0",
+    "nodemon": "^1.19.1"
   }
 }
