--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-MONGO_URI= mongodb+srv://Anna:KqmE4mvIG3lkyeIj@cluster0.mimbsge.mongodb.net/CROCUS?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Anna:KqmE4mvIG3lkyeIj@cluster0.mimbsge.mongodb.net/CROCUS?retryWrites=true&w=majority
 SECRET_OR_KEY= MZXVZXThpu6Tl9tPa6QFuyferaf21oTL  
+NODEMAILER_USER=armbrustrututu66@gmail.com
+NODEMAILER_PASSWORD=fYzJyOLFSa1qQ54M
+NODEMAILER_SERVICE=smtp-relay.brevo.com
+NODEMAILER_PORT=587
+PORT=4000
